# IT3070

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
tinyshell/: CMakeLists.txt  main.c
tinyshell/libtinyshell/: builtin.c  builtin.h  parse_cmd.c  parse_cmd.h  process.h  tinyshell.c  tinyshell.h  utils.h
tinyshell/libtinyshell/platform/unix/: parse_cmd.c  parse_cmd.h  process.c
tinyshell/libtinyshell/platform/windows/: process.c
tinyshell/src/: main.c
tinyshell/tests/: ls.c  parse_cmd_test.c  run_script.h  sleep.c  stdpath.c
tinyshell/tests/platform/unix/: ls.c
tinyshell/tests/platform/windows/: batch_file.c  child.c  process.c
tinyshell/tests/scripts/: shell.tsh  sleep.tbat  sleep.tsh  start_echo.tbat  stdpath.tbat  stdpath.tsh
